--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ h6 {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+  overflow: hidden;
 }
 
 .betnero_wrapper > * {
@@ -257,54 +258,6 @@ body {
 [data-simplebar] {
   -ms-flex-wrap: nowrap !important;
       flex-wrap: nowrap !important;
-}
-
-/* Для полосы прокрутки на всей странице */
-
-::-webkit-scrollbar {
-  /* Ширина полосы прокрутки */
-}
-
-/* Для трека (основной фон) полосы прокрутки */
-
-::-webkit-scrollbar-track {
-  background: rgba(87, 121, 222, 0.0078431373);
-  /* Цвет фона трека */
-}
-
-/* Для дорожки (заполненной части) полосы прокрутки */
-
-::-webkit-scrollbar-thumb {
-  background: rgba(19, 28, 56, 0.5058823529);
-  /* Цвет дорожки */
-}
-
-/* Для кнопки прокрутки вверх */
-
-::-webkit-scrollbar-button {
-  background-color: rgba(204, 204, 204, 0);
-  /* Цвет кнопки */
-}
-
-/* Для кнопки прокрутки вниз */
-
-::-webkit-scrollbar-button:end:increment {
-  background-color: rgba(204, 204, 204, 0);
-  /* Цвет кнопки */
-}
-
-/* Для кнопки прокрутки вверх при наведении курсора */
-
-::-webkit-scrollbar-button:hover {
-  background-color: #060f2a;
-  /* Цвет кнопки при наведении */
-}
-
-/* Для кнопки прокрутки вниз при наведении курсора */
-
-::-webkit-scrollbar-button:end:increment:hover {
-  background-color: #060f2a;
-  /* Цвет кнопки при наведении */
 }
 
 h1,
@@ -1825,6 +1778,31 @@ footer {
   height: 40px;
 }
 
+.betnero_games .swiper {
+  overflow: visible;
+  position: relative;
+}
+
+.betnero_games .swiper::before,
+.betnero_games .swiper::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: #1C2747;
+  opacity: 0.5;
+  z-index: 10;
+}
+
+.betnero_games .swiper::before {
+  left: -100%;
+}
+
+.betnero_games .swiper::after {
+  left: 100%;
+}
+
 .betnero_tabs__slider {
   position: relative;
 }
@@ -1887,9 +1865,21 @@ footer {
 .betnero_games__thumb {
   border-radius: 4px;
   overflow: hidden;
+  position: relative;
+}
+
+.betnero_games__thumb::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
 }
 
 .betnero_games__thumb img {
+  display: block;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -1950,6 +1940,11 @@ footer {
 
 .betnero_info-block__text-block p img {
   width: 16px;
+}
+
+.betnero_info-block__text-block p a {
+  color: #E9F150;
+  text-decoration: underline;
 }
 
 .betnero_info-block__text-block_sub-title {
@@ -3529,6 +3524,36 @@ footer {
     -webkit-transform: scale(1.3);
         -ms-transform: scale(1.3);
             transform: scale(1.3);
+  }
+
+  .betnero_games__thumb:hover {
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    -webkit-transform: scale(1.07);
+        -ms-transform: scale(1.07);
+            transform: scale(1.07);
+  }
+
+  .betnero_games__thumb:hover::after {
+    background: url("../img/icons/play.svg") center center no-repeat;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    -webkit-transition: opacity 0.3s ease 0s;
+    -o-transition: opacity 0.3s ease 0s;
+    transition: opacity 0.3s ease 0s;
+  }
+
+  .betnero_high-thumbs .betnero_games__thumb:hover {
+    -webkit-transform: scale(1.04);
+        -ms-transform: scale(1.04);
+            transform: scale(1.04);
+  }
+
+  .betnero_wide-thumbs .betnero_games__thumb:hover {
+    -webkit-transform: scale(1.04);
+        -ms-transform: scale(1.04);
+            transform: scale(1.04);
   }
 }
 
